--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -5,3 +5,23 @@ button {
 div {
   margin: 3em;
 }
+.navbar {
+  justify-content: space-between;
+}
+.navbar span {
+  padding-right: 1rem;
+}
+mat-sidenav-container {
+  height: 100%;
+}
+mat-sidenav,
+mat-sidenav-content {
+  padding: 16px;
+}
+mat-sidenav {
+  background-color: lightcoral;
+  width: 200px;
+}
+.center{
+  margin: 10rem;
+}
