--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,28 +1,61 @@
+<mat-toolbar color="primary" class="navbar">
+  <div>Codevolution</div>
+  <div>
+    <span>Home</span>
+    <span>About</span>
+    <span>Services</span>
+  </div>
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" (opened)="log('Opened')" (closed)="log('Closed')" [(opened)]="opened">Sidenav
+  </mat-sidenav>
+  <mat-sidenav-content>Main
+    <button (click)="opened=!opened">Toggel Opened</button>
+    <button (click)="sidenav.open()">Open</button>
+    <button (click)="sidenav.close()">Close</button>
+    <button (click)="sidenav.toggle()">Toggle</button>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+<mat-progress-spinner value='100'></mat-progress-spinner>
+<mat-spinner *ngIf="showSpinner" color="accent"></mat-spinner>
+<button (click)="loadData()">Load Data</button>
+
 <div>
   <div>
-  <span matBadge="5">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgePosition="below before">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgePosition="below after">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgePosition="above before">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgeSize="small">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgeSize="medium">Notifications</span>
-</div>
-<div>
-  <span matBadge="5" matBadgeSize="large">Notifications</span>
-</div>
-<div>
-  <mat-icon color="primary">fingerprint</mat-icon>
-</div>
+    <span [matBadge]="notifications" [matBadgeHidden]="notifications===0">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgePosition="below before">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgePosition="below after">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgePosition="above before">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeSize="small">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeSize="medium">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeSize="large">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeColor="primary">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeColor="accent">Notifications</span>
+  </div>
+  <div>
+    <span matBadge="5" matBadgeColor="warn" matBadgeOverlap="false">Notifications</span>
+  </div>
+  <div>
+    <mat-icon color="primary">fingerprint</mat-icon>
+  </div>
 </div>
 <div>
   <mat-button-toggle #toggleBtn checked>Toggle</mat-button-toggle>
@@ -51,20 +84,6 @@
   <button mat-mini-fab>MiniFab</button>
 </div>
 
-<div>
-  <button color="primary" mat-button>Primary</button>
-  <button color="accent" mat-button>Accent</button>
-  <button color="warn" disableRipple mat-button>Warn</button>
-  <button color="primary" mat-raised-button>Primary</button>
-  <button color="accent" mat-raised-button>Accent</button>
-  <button color="warn" mat-raised-button>Warn</button>
-</div>
-
-<div class="mat-display-4">This is dispaly 4</div>
-<div class="mat-display-3">This is dispaly 3</div>
-<div class="mat-display-2">This is dispaly 2</div>
-<div class="mat-display-1">This is dispaly 1</div>
-
 <div class="mat-headline">This is a heading for h1</div>
 <div class="mat-title">This is a heading for h2</div>
 <div class="mat-subheading-1">This is a heading for h3</div>
@@ -80,3 +99,28 @@
   <h3>This is a heading for h3</h3>
   <h4>This is a heading for h4</h4>
 </div>
+
+<mat-menu #appMenu='matMenu' xPosition="after" yPosition="above">
+  <button mat-menu-item [matMenuTriggerFor]="subMenu">Frontend</button>
+  <button mat-menu-item>Backend</button>
+</mat-menu>
+<button class="center" [matMenuTriggerFor]="appMenu">Menu</button>
+
+<mat-menu #subMenu="matMenu">
+  <button mat-menu-item>Angular</button>
+  <button mat-menu-item>React</button>
+  <button mat-menu-item>Vue</button>
+</mat-menu>
+
+<mat-menu #lazyMenu="matMenu">
+  <ng-template matMenuContent let-name="name" let-hobby="hobby">
+    <button mat-menu-item>Settings</button>
+    <button mat-menu-item>Hobby is {{hobby}}</button>
+    <button mat-menu-item>Log out {{name}}</button>
+  </ng-template>
+</mat-menu>
+
+<button mat-raised-button [matMenuTriggerData]="{name:'Vishwas', hobby:'football'}"
+  [matMenuTriggerFor]="lazyMenu">Vishwas</button>
+<button mat-raised-button [matMenuTriggerData]="{name:'Codevolution', hobby:'teaching'}"
+  [matMenuTriggerFor]="lazyMenu">Codevolution</button>
