--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -124,3 +124,103 @@
   [matMenuTriggerFor]="lazyMenu">Vishwas</button>
 <button mat-raised-button [matMenuTriggerData]="{name:'Codevolution', hobby:'teaching'}"
   [matMenuTriggerFor]="lazyMenu">Codevolution</button>
+<!-- 
+<mat-list dense>
+  <mat-list-item>Item 1</mat-list-item>
+  <mat-list-item>Item 2</mat-list-item>
+  <mat-list-item>Item 3</mat-list-item>
+</mat-list>
+<mat-nav-list>
+  <a mat-list-item href="#">Home</a>
+  <a mat-list-item href="#">About</a>
+  <a mat-list-item href="#">Services</a>
+</mat-nav-list> -->
+
+<mat-list>
+  <mat-list-item>
+    <mat-icon matListIcon>home</mat-icon>
+    <h3 matLine>Heading</h3>
+    <p matLine>Line</p>
+  </mat-list-item>
+</mat-list>
+<mat-divider></mat-divider>
+<mat-list>
+  <mat-list-item>
+    <mat-icon matListIcon>folder</mat-icon>
+    <h3 matLine>Heading 2</h3>
+    <p matLine>Line 2</p>
+  </mat-list-item>
+</mat-list>
+
+<mat-grid-list cols="2" rowHeight="fit" style="height: 200px;" gutterSize="10px">
+  <mat-grid-tile>Tile 1</mat-grid-tile>
+  <mat-grid-tile>Tile 2</mat-grid-tile>
+  <mat-grid-tile>Tile 3</mat-grid-tile>
+  <mat-grid-tile>Tile 4</mat-grid-tile>
+</mat-grid-list>
+
+<mat-accordion multi='true' hideToggle>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Anglar Fundamentals
+      </mat-panel-title>
+      <mat-panel-description>
+        Total Duration : 3 hours
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <p>This is the panel content. Add course details.</p>
+    <mat-action-row>
+      <button mat-button>Enroll</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Anglar Material
+      </mat-panel-title>
+      <mat-panel-description>
+        Total Duration : 2 hours
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <p>This is the panel content. Add course details.</p>
+    <mat-action-row>
+      <button mat-button>Enroll</button>
+    </mat-action-row>
+  </mat-expansion-panel>
+</mat-accordion>
+
+<mat-card>
+  <mat-card-title>
+    Card Title
+  </mat-card-title>
+  <mat-card-content>
+    This is the card content
+  </mat-card-content>
+  <mat-card-actions align="end">
+    <button mat-flat-button>Login</button>
+  </mat-card-actions>
+</mat-card>
+
+<mat-tab-group #tabRef (selectedTabChange)="logChange(tabRef.selectedIndex)">
+  <mat-tab label="Angular">Angular Content</mat-tab>
+  <mat-tab label="React">React Content</mat-tab>
+  <mat-tab label="Vue">Vue Content</mat-tab>
+</mat-tab-group>
+{{tabRef.selectedIndex}}
+
+<mat-vertical-stepper linear>
+  <mat-step label="Shipping Address" completed=true>
+    <p>Shipping Address Details</p>
+  </mat-step>
+  <mat-step label="Billing Adddress" completed=false optional>
+    <p>Billing Address Details</p>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button matStepperNext>Next</button>
+    </div>
+  </mat-step>
+  <mat-step label="Place Order" completed=false>
+    <p>Order Details</p>
+  </mat-step>
+</mat-vertical-stepper>
